[project]
name = "mlx-vlm-check"
description = "Image analysis and caption generation using MLX Vision Language Models."
version = "0.1.0"
authors = [
    { name = "jrp2014", email = "jrp2014@users.noreply.github.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mlx", "vision", "language-model", "ai", "image-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Environment :: Console",
]
# PEP 621: declare runtime dependencies as an inline array instead of a key/value table.
# This keeps ordering deterministic and simplifies automated parsing.
dependencies = [
    # Core MLX dependencies (raised minimums to align with currently tested APIs)
    "mlx>=0.29.1",
    "mlx-vlm>=0.0.9",
    "mlx-lm>=0.23.0",
    # Core Python data libraries
    "numpy",
    # Image processing
    "Pillow>=10.3.0",
    "opencv-python>=4.12.0.88",
    # ML/AI frameworks
    "transformers>=4.53.0",
    "datasets>=2.19.1",
    # Model and caching utilities
    "huggingface-hub>=0.23.0",
    # Serialization and configuration
    "protobuf",
    "pyyaml",
    "jinja2",
    # Network and API
    "requests>=2.31.0",
    "fastapi>=0.95.1",
    "uvicorn",
    # Audio processing
    "soundfile>=0.13.1",
    # Report generation and utilities
    "tabulate>=0.9.0",
    "tqdm>=4.66.2",
    # System utilities
    "tzlocal>=5.0",
]

[project.urls]
Homepage = "https://github.com/jrp2014/scripts"
Repository = "https://github.com/jrp2014/scripts"
Issues = "https://github.com/jrp2014/scripts/issues"

[project.scripts]
# Use fully-qualified module path for the CLI entry point (module inside vlm package)
mlx-vlm-check = "vlm.check_models:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["vlm*"]

[project.optional-dependencies]
# Optional dependencies for enhanced functionality
extras = [
    # Hardware metrics (optional system block)
    "psutil>=5.9.0",
    # Tokenization utilities (optional; used for versions/introspection only)
    "tokenizers>=0.15.0",
]

# Guidance: Torch is supported but not required globally; install only when needed for specific models.
# Provide a dedicated extra to make it simple to opt in.
torch = [
    # Recent PyTorch wheels for macOS include MPS acceleration out of the box.
    # Version pins chosen to align with stable 2.2+ API and matching torchvision/torchaudio.
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
]

# Development dependencies
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0", 
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "types-tqdm",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# D203 and D213 are explicitly excluded to avoid incompatibility warnings with D211 and D212.
# Select all rules and then ignore the ones that are incompatible or too noisy.
extend-select = ["B"]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with formatter
    "ISC001",  # Conflicts with formatter
    "D203",    # Conflicts with D211
    "D213",    # Conflicts with D212
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Missing docstrings
    "S101",    # Use of assert
    "E501",    # Line too long
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "C901",    # Complex structure (handled by style guide)
    "PLR0912", # Too many branches
]

[tool.pylance]
# Pyright/Pylance configuration
# See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
pythonVersion = "3.12"
typeCheckingMode = "basic" # Can be "off", "basic", or "strict"
reportMissingImports = true
reportUnusedImport = "warning"

[tool.mypy]
# MyPy configuration
# See: https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.12"
ignore_missing_imports = true
# Search path for local type stubs (generated via stubgen into ./typings)
mypy_path = ["typings"]
# Do not descend into imports; treat imported modules as 'Any' unless stubs exist
follow_imports = "skip"
# For stricter checking, you can enable the following:
# disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true

# Explicitly silence external packages commonly used here
[[tool.mypy.overrides]]
module = [
    "mlx_lm.*",
    "tokenizers.*",
    "transformers.*",
    "datasets.*",
    "huggingface_hub.*",
    "tzlocal.*",
    "psutil.*",
]
ignore_missing_imports = true
ignore_errors = true
