[project]
name = "mlx-vlm-check"
description = "Image analysis and caption generation using MLX Vision Language Models."
version = "0.1.0"
authors = [
    { name = "jrp2014", email = "jrp2014@users.noreply.github.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mlx", "vision", "language-model", "ai", "image-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Environment :: Console",
]
# PEP 621: declare runtime dependencies as an inline array instead of a key/value table.
# This keeps ordering deterministic and simplifies automated parsing.
# Runtime intentionally slim: only what `vlm/check_models.py` imports directly.
# Everything else lives in extras to reduce cold install surface & build time.
dependencies = [
    # Minimal runtime set actually imported by check_models.py
    "mlx>=0.29.1",
    "mlx-vlm>=0.0.9",
    "Pillow>=10.3.0",
    "huggingface-hub>=0.23.0",
    "tabulate>=0.9.0",
    "tzlocal>=5.0",
]

[project.urls]
Homepage = "https://github.com/jrp2014/scripts"
Repository = "https://github.com/jrp2014/scripts"
Issues = "https://github.com/jrp2014/scripts/issues"

[project.scripts]
# Use fully-qualified module path for the CLI entry point (module inside vlm package)
mlx-vlm-check = "vlm.check_models:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["vlm*"]

[project.optional-dependencies]
# Optional dependencies grouped by use case.
extras = [
    # Hardware metrics (optional system block)
    "psutil>=5.9.0",
    # Fast tokenizer backends
    "tokenizers>=0.15.0",
    # Language-model utilities & transformer inference (not required for base benchmarking)
    "mlx-lm>=0.23.0",
    "transformers>=4.53.0",
]
torch = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "types-tqdm",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# D203 and D213 are explicitly excluded to avoid incompatibility warnings with D211 and D212.
# Select all rules and then ignore the ones that are incompatible or too noisy.
extend-select = ["B"]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with formatter
    "ISC001",  # Conflicts with formatter
    "D203",    # Conflicts with D211
    "D213",    # Conflicts with D212
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Missing docstrings
    "S101",    # Use of assert
    "E501",    # Line too long (allow longer lines for now)
    "PLR0913", # Too many arguments (temporarily tolerated)
    # NOTE: Previously ignored complexity/branch rules (C901, PLR0912, PLR0915) reinstated.
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Allow higher complexity in the central orchestrator script for now; revisit later.
"vlm/check_models.py" = ["C901"]
# CLI tools: allow print statements for user output
"vlm/tools/check_outdated.py" = ["T201"]
"vlm/tools/validate_env.py" = ["T201"]

[tool.pylance]
# Pyright/Pylance configuration
# See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
pythonVersion = "3.12"
typeCheckingMode = "basic" # Can be "off", "basic", or "strict"
reportMissingImports = true
reportUnusedImport = "warning"

[tool.mypy]
# MyPy configuration
# See: https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.12"
ignore_missing_imports = true
# Additional strictness flags (incremental tightening)
warn_unused_ignores = true
no_implicit_optional = true
# Search path for local type stubs (generated via stubgen into ./typings)
# Only use our curated stubs for mlx_vlm; avoid scanning tokenizers stubs which are noisy
mypy_path = ["typings/mlx_vlm"]
# Exclude third-party stub trees that may contain incomplete or conflicting definitions
exclude = ["^typings/tokenizers/.*"]
# Do not descend into imports; treat imported modules as 'Any' unless stubs exist
follow_imports = "skip"
# For stricter checking, you can enable the following:
# disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true

# Explicitly silence external packages commonly used here
[[tool.mypy.overrides]]
module = [
    "mlx_lm.*",
    "tokenizers.*",
    "transformers.*",
    "datasets.*",
    "huggingface_hub.*",
    "tzlocal.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Limit test discovery to the dedicated tests package inside the project
# (avoids collecting helper scripts or example snippets).
testpaths = ["vlm/tests"]
# Keep output concise; individual developers can override locally if needed.
addopts = "-q"

